[FLINK-38938][table] Restore of SQL job with `CURRENT_TIMESTAMP` fails with `CodeGenException`